# preflate-rs

./: Cargo.toml
libpreflate-sys/: Cargo.toml  README.md  build.rs
libpreflate-sys/src/: lib.rs
preflate-bindings/: Cargo.toml  README.md
preflate-bindings/src/: lib.rs
preflate-bindings/tests/: decode_reencode.rs
