[package]
name = "preflate-bindings"
version = "0.1.0"
edition = "2021"
authors = ["xNyaDev <xnyadev@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xNyaDev/preflate-rs/"
homepage = "https://github.com/xNyaDev/preflate-rs/"
description = "Minimal bindings to preflate, a deflate stream reconstruction library"
categories = ["api-bindings"]
keywords = ["preflate", "reconstruction"]

[dependencies]
cxx = "1.0.110"
libpreflate-sys = { path = "../libpreflate-sys", version = "0.1.0" }

[dev-dependencies]
pretty_assertions = "1.3.0"
flate2 = "1.0.28"